Fixed android font alignment

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -498,9 +498,6 @@ video.qr-preview {
     &.fake-link:hover {
       text-decoration: none;
     }
-
-    &.current-tab {
-    }
   }
 
   .settings {
@@ -1043,15 +1040,16 @@ formly-field-radio, formly-field-multicheckbox {
   height: 24px;
   border-radius: 2px;
   text-align: center;
-  line-height: 27px;
+  line-height: 24px;
   cursor: pointer;
 
   .toggle-plus {
     position: relative;
+    top: 1px;
   }
   .toggle-x {
     position: relative;
-    top: 0;
+    top: 1px;
   }
 
   &.actions-toggle {
